remove HashSet